--- a/css/style.css
+++ b/css/style.css
@@ -44,9 +44,10 @@ h1 {
 }
 
 h2 {
-  font-size: 55px;
   font-weight: 300;
   color: #AA8C41;
+  font-size: 5vw;
+  text-align: center;
 }
 
 h3 {
@@ -82,6 +83,15 @@ h3 {
   }
 }
 
+p {
+  font-size: 12px;
+  line-height: 24px;
+  letter-spacing: 1px;
+  word-spacing: 2px;
+  text-align: justify;
+  color: #707070;
+}
+
 a {
   text-decoration: none;
   color: #AA8C41;
@@ -101,7 +111,7 @@ a:hover {
   background-color: transparent;
   border: 2px solid #AA8C41;
   border-radius: 50px;
-  width: 190px;
+  width: 180px;
   height: 50px;
   color: #ffffff;
   font-size: 16px;
@@ -131,6 +141,14 @@ a:hover {
     width: 180px;
     height: 45px;
     font-size: 12px;
+  }
+}
+
+@media (min-width: 1024px) and (orientation: landscape) {
+  .button {
+    width: 200px;
+    height: 60px;
+    font-size: 16px;
   }
 }
 
@@ -212,7 +230,7 @@ a:hover {
 
 .header__aside--active {
   left: 0;
-  opacity: .95;
+  opacity: .98;
 }
 
 .header__logo {
@@ -504,6 +522,12 @@ a:hover {
   }
 }
 
+@media (min-width: 1024px) and (orientation: landscape) {
+  .header__text--herotext {
+    margin-bottom: 80px;
+  }
+}
+
 .header__text--herosecond {
   margin-bottom: 50px;
 }
@@ -532,10 +556,112 @@ a:hover {
   }
 }
 
+@media (min-width: 1024px) and (orientation: landscape) {
+  .header__text--herosecond {
+    margin-bottom: 80px;
+  }
+}
+
 .ich {
   position: relative;
-  min-height: 200vh;
   width: 100%;
+  min-height: 100vh;
   background-color: #fff;
+}
+
+.ich__wrapper {
+  width: 65%;
+  margin: 0 auto;
+  padding-top: 20px;
+}
+
+.ich__wrapper--heading {
+  margin: 50px auto 70px;
+}
+
+.ich__wrapper--content {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.ich__wrapper--content-rahmen {
+  margin-bottom: 50px;
+  width: 70vw;
+  height: 70vw;
+  max-width: 500px;
+  max-height: 500px;
+  padding: 5px;
+  border: 2px solid #AA8C41;
+}
+
+.ich__wrapper--content-rahmen__foto {
+  width: 98%;
+  height: 98%;
+  margin: 1% 0 0 1%;
+  background-image: url(../img/UeberMichFoto.jpg);
+  background-size: cover;
+  background-position: center -35px;
+  background-repeat: no-repeat;
+}
+
+.ich__wrapper--content-promovideo {
+  position: relative;
+  margin: 50px auto;
+  width: 100%;
+  height: 40vw;
+  background-color: #000;
+}
+
+.ich__wrapper--content-promovideo::after {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  content: 'Video';
+  color: #fff;
+}
+
+.ich__wrapper--content-kontakt {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.ich__wrapper--content-kontakt__text {
+  text-align: center;
+  margin-bottom: 50px;
+}
+
+.ich__wrapper--content-kontakt__text-action {
+  text-align: center;
+  text-transform: uppercase;
+  font-weight: 700;
+  color: #AA8C41;
+  margin-bottom: 50px;
+}
+
+.ich__wrapper--content-kontakt__button {
+  color: #707070;
+  margin-bottom: 50px;
+}
+
+.ich__wrapper--content-kontakt__button:hover {
+  color: #fff;
 }
 /*# sourceMappingURL=style.css.map */
