--- a/css/style.css
+++ b/css/style.css
@@ -50,6 +50,12 @@ h2 {
   text-align: center;
 }
 
+@media (min-width: 1024px) and (orientation: landscape) {
+  h2 {
+    font-size: 35px;
+  }
+}
+
 h3 {
   font-size: 3vw;
   line-height: 30px;
@@ -364,14 +370,6 @@ a:hover {
 
 .header__navpc {
   display: none;
-  position: fixed;
-  left: 70px;
-  top: 55px;
-  height: 30px;
-  width: 85%;
-  -webkit-transition: top 400ms ease-in-out;
-  transition: top 400ms ease-in-out;
-  z-index: 1000;
 }
 
 @media (min-width: 1024px) and (orientation: landscape) {
@@ -389,11 +387,13 @@ a:hover {
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
+    position: relative;
+    left: 70px;
+    top: 55px;
+    height: 30px;
+    width: 85%;
+    z-index: 1000;
   }
-}
-
-.header__navpc--up {
-  top: -175px;
 }
 
 .header__navpc--logo {
@@ -434,6 +434,92 @@ a:hover {
 @media (min-width: 1400px) and (orientation: landscape) {
   .header__navpc--box-element {
     font-size: 14px;
+  }
+}
+
+.header__navpcbgc {
+  display: none;
+}
+
+@media (min-width: 1024px) and (orientation: landscape) {
+  .header__navpcbgc.active {
+    display: block;
+    position: fixed;
+    top: 0;
+    width: 100vw;
+    height: 80px;
+    background-color: #fff;
+    z-index: 1000;
+    -webkit-box-shadow: 0px 37px 48px -26px rgba(0, 0, 0, 0.43);
+    box-shadow: 0px 37px 48px -26px rgba(0, 0, 0, 0.43);
+    -webkit-transition: top 400ms ease-in-out;
+    transition: top 400ms ease-in-out;
+  }
+  .header__navpcbgc.active--up {
+    top: -80px;
+  }
+  .header__navpcbgc--wrapper {
+    position: absolute;
+    left: 50%;
+    -webkit-transform: translateX(-50%);
+            transform: translateX(-50%);
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    -ms-flex-pack: distribute;
+        justify-content: space-around;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    width: 85%;
+    height: 80px;
+  }
+  .header__navpcbgc--wrapper--logo {
+    width: 175px;
+    height: 80px;
+    background-position: center center;
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-image: url(../img/LogoMenuBlack.png);
+  }
+  .header__navpcbgc--wrapper--box {
+    list-style: none;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    width: 80%;
+  }
+}
+
+@media (min-width: 1024px) and (orientation: landscape) and (min-width: 1024px) and (orientation: portrait) {
+  .header__navpcbgc--wrapper--box-element {
+    font-size: 12px;
+  }
+}
+
+@media (min-width: 1024px) and (orientation: landscape) and (min-width: 1024px) and (orientation: landscape) {
+  .header__navpcbgc--wrapper--box-element {
+    font-size: 1vw;
+    font-weight: bold;
+  }
+}
+
+@media (min-width: 1024px) and (orientation: landscape) and (min-width: 1200px) and (orientation: landscape) {
+  .header__navpcbgc--wrapper--box-element {
+    font-size: 12px;
   }
 }
 
@@ -478,6 +564,7 @@ a:hover {
 @media (min-width: 1024px) and (orientation: landscape) {
   .header__text {
     left: 100px;
+    top: 22%;
     -webkit-transform: none;
             transform: none;
     max-width: 800px;
@@ -592,14 +679,55 @@ a:hover {
           align-items: center;
 }
 
+@media (min-width: 1024px) and (orientation: landscape) {
+  .ich__wrapper--content {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    -webkit-box-align: stretch;
+        -ms-flex-align: stretch;
+            align-items: stretch;
+  }
+}
+
 .ich__wrapper--content-rahmen {
   margin-bottom: 50px;
   width: 70vw;
   height: 70vw;
-  max-width: 500px;
-  max-height: 500px;
+  max-width: 300px;
+  max-height: 300px;
   padding: 5px;
   border: 2px solid #AA8C41;
+}
+
+@media (min-width: 360px) and (orientation: portrait) {
+  .ich__wrapper--content-rahmen {
+    width: 50vw;
+    height: 50vw;
+  }
+}
+
+@media (min-width: 560px) and (orientation: landscape) {
+  .ich__wrapper--content-rahmen {
+    width: 40vw;
+    height: 40vw;
+  }
+}
+
+@media (min-width: 640px) and (orientation: landscape) {
+  .ich__wrapper--content-rahmen {
+    width: 40vw;
+    height: 40vw;
+  }
+}
+
+@media (min-width: 1024px) and (orientation: landscape) {
+  .ich__wrapper--content-rahmen {
+    width: 300vw;
+    height: 300vw;
+    margin-right: 100px;
+  }
 }
 
 .ich__wrapper--content-rahmen__foto {
@@ -612,12 +740,25 @@ a:hover {
   background-repeat: no-repeat;
 }
 
+@media (min-width: 1024px) and (orientation: landscape) {
+  .ich__wrapper--content-rahmen-ueber {
+    margin-left: 300px;
+  }
+}
+
 .ich__wrapper--content-promovideo {
   position: relative;
   margin: 50px auto;
   width: 100%;
   height: 40vw;
   background-color: #000;
+}
+
+@media (min-width: 1024px) and (orientation: landscape) {
+  .ich__wrapper--content-promovideo {
+    height: 20vw;
+    width: 75%;
+  }
 }
 
 .ich__wrapper--content-promovideo::after {
@@ -661,7 +802,91 @@ a:hover {
   margin-bottom: 50px;
 }
 
+@media (min-width: 760px) and (orientation: portrait) {
+  .ich__wrapper--content-kontakt__button {
+    margin-bottom: 150px;
+  }
+}
+
+@media (min-width: 1024px) and (orientation: landscape) {
+  .ich__wrapper--content-kontakt__button {
+    margin-bottom: 150px;
+  }
+}
+
 .ich__wrapper--content-kontakt__button:hover {
   color: #fff;
+}
+
+.break__logo {
+  position: relative;
+  width: 100%;
+  height: 40vh;
+  background-image: url(../img/teksture.jpg);
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-attachment: fixed;
+}
+
+@media (min-width: 360px) and (orientation: portrait) {
+  .break__logo {
+    height: 50vh;
+  }
+}
+
+@media (min-width: 760px) and (orientation: portrait) {
+  .break__logo {
+    height: 40vh;
+  }
+}
+
+@media (min-width: 560px) and (orientation: landscape) {
+  .break__logo {
+    height: 70vh;
+  }
+}
+
+.break__logo::after {
+  position: absolute;
+  content: '';
+  display: block;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+}
+
+.break__logo::before {
+  position: absolute;
+  content: '';
+  width: 100%;
+  height: 100%;
+  background-image: url(../img/LogoMenu.png);
+  background-size: contain;
+  background-position: -20px center;
+  background-repeat: no-repeat;
+  z-index: 1;
+  background-attachment: fixed;
+}
+
+@media (min-width: 760px) and (orientation: portrait) {
+  .break__logo::before {
+    background-position: -60px center;
+  }
+}
+
+@media (min-width: 1024px) and (orientation: landscape) {
+  .break__logo::before {
+    background-position: -80px center;
+  }
+}
+
+.leistung {
+  position: relative;
+  width: 100%;
+  height: 100vh;
+  background-color: #000;
 }
 /*# sourceMappingURL=style.css.map */
