--- a/sass/style.sass
+++ b/sass/style.sass
@@ -65,6 +65,9 @@ a
     overflow: hidden
     &:hover
         border-bottom: 2px solid #AA8C41
+span
+    color: #AA8C41
+    font-weight: 700
 .button
     background-color: transparent
     border: 2px solid #AA8C41
@@ -471,6 +474,8 @@ a
         @media (min-width: 760px) and (orientation: portrait)
             background-position: 30% center
             background-size: 550px 350px
+        @media (min-width: 1024px) and (orientation: portrait)
+            background-position: 40% center
         @media (min-width: 560px) and (orientation: landscape)
             background-size: 400px 250px
             background-position: 35% center
@@ -572,7 +577,7 @@ a
                 height: 105vh
             @media (min-width: 760px) and (orientation: portrait)
                 height: 55vh
-            @media (min-width: 1024px) and (orientation: portrait)
+            @media (min-width: 1020px) and (orientation: portrait)
                 height: 40vh
             @media (min-width: 560px) and (orientation: landscape)
                 height: 170vh
@@ -613,3 +618,71 @@ a
     min-height: 100vh
     width: 100%
     background-color: #fff
+    &__wrapper
+        padding-top: 50px  
+        &--heading
+            margin-bottom: 50px
+        &--text
+            margin-bottom: 50px
+            text-align: center
+            @media (min-width: 760px) and (orientation: portrait)
+                margin-bottom: 100px
+        &--elementeMobile
+            display: flex
+            flex-direction: column
+            padding-bottom: 50px
+            @media (min-width: 560px) and (orientation: landscape)
+                flex-direction: row
+                flex-wrap: wrap
+            @media (min-width: 760px) and (orientation: portrait)
+                flex-direction: row
+                flex-wrap: wrap
+            &__element
+                display: flex
+                flex-direction: column
+                width: 100%
+                margin: 0 auto
+                align-items: center
+                margin-bottom: 50px
+                @media (min-width: 560px) and (orientation: landscape)
+                    width: 40%
+                @media (min-width: 760px) and (orientation: portrait)
+                    width: 40%
+                &-symbol
+                    position: relative
+                    display: flex
+                    flex-direction: column
+                    width: 160px
+                    height: 160px
+                    align-items: center
+                    border: 2px solid #AA8C41
+                    border-radius: 50%
+                    margin-bottom: 25px
+                    &__ico
+                        position: absolute
+                        top: 15px
+                        width: 70px
+                        height: 70px
+                        background-size: contain
+                        background-repeat: no-repeat
+                        background-position: center center
+                    &__text
+                        position: absolute
+                        top: 100px
+                &-description
+                    text-align: center
+.analyse__ico
+    background-image: url(../ico/angebot/1analyse.png)
+.planung__ico
+    background-image: url(../ico/angebot/2path.png)
+.beratung__ico
+    background-image: url(../ico/angebot/3discuss.png)
+.umsetzung__ico
+    background-image: url(../ico/angebot/4implementation.png)
+.partnerschaft__ico
+    background-image: url(../ico/angebot/5partnerschip.png)    
+.kontakt
+    position: relative
+    width: 100%
+    min-height: 100vh
+    background-color: #F8F8F8
